--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "next-compose-plugins": "^2.2.1",
@@ -22,11 +20,11 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.27.5",
